[package]
name = "ec_math"
version = "0.1.0"
authors = ["samkim-crypto <skim13@cs.stanford.edu>"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.6.7"
borsh = "0.8"
borsh-derive = "0.8.1"
thiserror = "1.0"
bigint = "4.4"
arrayref = "0.3"
curve25519-bpf-test = { git = "https://github.com/samkim-crypto/curve25519-bpf-test", branch = "main" }
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
digest = { version = "0.9", default-features = false }

[dev-dependencies]
solana-program-test = "1.6.7"
solana-sdk = "1.6.7"
proptest = "0.10"

[lib]
crate-type = ["cdylib", "lib"]
